--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,29 @@ dist
 
 # TernJS port file
 .tern-port
+
+# Eclipse
+.classpath
+.project
+.settings/
+# Intellij
+.idea/
+*.iml
+*.iws
+#Visual Studio Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# Local History for Visual Studio Code
+.history/
+
+# System Files
+.DS_Store
+Thumbs.db
+dev-mock.js
+.AppleDouble
+.LSOverride
